{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 184,
  "lineage": "c5701195-b86a-4aed-9fdc-e412d349f08e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0259720951a88e568",
            "domain": "vpc",
            "id": "eipalloc-0259720951a88e568",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-54-180-168-221.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.168.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092dfb48456a3b119",
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:instance/i-0290bf71510c91156",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0290bf71510c91156",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a664fda3d0e7d2b1",
            "private_dns": "ip-10-0-2-31.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.31",
            "public_dns": "ec2-13-125-230-133.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.230.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05be2ba588fa228da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-004a057f8113fa3fd",
            "tags": {
              "Name": "terraform-instance"
            },
            "tags_all": {
              "Name": "terraform-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07077298f87493a41"
            ]
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public1",
            "aws_vpc.terraform-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:internet-gateway/igw-0947680e64824b63c",
            "id": "igw-0947680e64824b63c",
            "owner_id": "523139768306",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-09c41119082a32117"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0259720951a88e568",
            "connectivity_type": "public",
            "id": "nat-04980934fa1d3bd43",
            "network_interface_id": "eni-091da150a1519a78d",
            "private_ip": "10.0.16.14",
            "public_ip": "54.180.168.221",
            "subnet_id": "subnet-082c29d524fbb433a",
            "tags": {
              "Name": "terraform Nat gw"
            },
            "tags_all": {
              "Name": "terraform Nat gw"
            }
          },
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_subnet.public2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1-routing-table-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:route-table/rtb-060d3cac6773d20a5",
            "id": "rtb-060d3cac6773d20a5",
            "owner_id": "523139768306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04980934fa1d3bd43",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1-routing-table"
            },
            "tags_all": {
              "Name": "private1-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c41119082a32117"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2-routing-table-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:route-table/rtb-00fda218b36e1678e",
            "id": "rtb-00fda218b36e1678e",
            "owner_id": "523139768306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04980934fa1d3bd43",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2-routing-table"
            },
            "tags_all": {
              "Name": "private2-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c41119082a32117"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routing-table-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:route-table/rtb-0b2b94e50bd7c050b",
            "id": "rtb-0b2b94e50bd7c050b",
            "owner_id": "523139768306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0947680e64824b63c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-routing-table"
            },
            "tags_all": {
              "Name": "public-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c41119082a32117"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc6600cc00e9c3d7",
            "route_table_id": "rtb-060d3cac6773d20a5",
            "subnet_id": "subnet-07d7902aef218c15d"
          },
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private1-routing-table-terraform",
            "aws_subnet.private1",
            "aws_subnet.public2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c633c083368d6a1",
            "route_table_id": "rtb-00fda218b36e1678e",
            "subnet_id": "subnet-00d031f1db945dfe0"
          },
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private2-routing-table-terraform",
            "aws_subnet.private2",
            "aws_subnet.public2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015a174998e4c132a",
            "route_table_id": "rtb-0b2b94e50bd7c050b",
            "subnet_id": "subnet-004a057f8113fa3fd"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.public-routing-table-terraform",
            "aws_subnet.public1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9716247577afda6",
            "route_table_id": "rtb-0b2b94e50bd7c050b",
            "subnet_id": "subnet-082c29d524fbb433a"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.public-routing-table-terraform",
            "aws_subnet.public2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:security-group/sg-01259614d802f16a7",
            "description": "Allow DB inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01259614d802f16a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql_aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "private",
            "name_prefix": "",
            "owner_id": "523139768306",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09c41119082a32117"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:security-group/sg-07077298f87493a41",
            "description": "Allow Web, SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07077298f87493a41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public",
            "name_prefix": "",
            "owner_id": "523139768306",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09c41119082a32117"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:subnet/subnet-07d7902aef218c15d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d7902aef218c15d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523139768306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet1"
            },
            "tags_all": {
              "Name": "private subnet1"
            },
            "vpc_id": "vpc-09c41119082a32117"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:subnet/subnet-00d031f1db945dfe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d031f1db945dfe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523139768306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet2"
            },
            "tags_all": {
              "Name": "private subnet2"
            },
            "vpc_id": "vpc-09c41119082a32117"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:subnet/subnet-004a057f8113fa3fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004a057f8113fa3fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523139768306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet1"
            },
            "tags_all": {
              "Name": "public subnet1"
            },
            "vpc_id": "vpc-09c41119082a32117"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:subnet/subnet-082c29d524fbb433a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082c29d524fbb433a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523139768306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet2"
            },
            "tags_all": {
              "Name": "public subnet2"
            },
            "vpc_id": "vpc-09c41119082a32117"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:523139768306:vpc/vpc-09c41119082a32117",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c65d0aab9fb91e1",
            "default_route_table_id": "rtb-080608efbbdcdbfad",
            "default_security_group_id": "sg-07fee26cac7532d02",
            "dhcp_options_id": "dopt-0c99e658e6b1db271",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09c41119082a32117",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080608efbbdcdbfad",
            "owner_id": "523139768306",
            "tags": {
              "Name": "테라폼 VPC"
            },
            "tags_all": {
              "Name": "테라폼 VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}